merapihkan file dan landing page

--- a/register-kursus.html
+++ b/register-kursus.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title></title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="asset/css/style.css">
+    <!--Framework CSS Bootstrap untuk Memperindah Tampilan-->
+    <link rel="stylesheet" href="asset/css/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="asset/css/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="asset/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.eot">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
